--- a/001_Data_retrieve.ipynb
+++ b/001_Data_retrieve.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "fdb81e9b-de92-4614-acdf-fc50d739c8d0",
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f63690e-2afb-4096-9462-b66f5425bcda",
    "metadata": {},
    "source": [
     "# Proyecto final Bioinformática (NLP)"
@@ -21,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d70fde61-b8d1-4d2b-adf5-5d9670891d15",
    "metadata": {},
    "source": [
     "Mirar el siguiente video. Sobre todo la primer parte como para tener contexto sobre descubrimiento de drogas:\n",
@@ -31,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e532b12-83cc-4a5e-9f0e-d53459b26a37",
    "metadata": {},
    "source": [
     "Resumen y puntos importantes del video:\n",
@@ -47,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da95879-3221-4d3c-9815-2cc16d6f65b7",
    "metadata": {},
    "source": [
     "### Objetivos del proyecto:\n",
@@ -66,7 +70,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d621c55a-a01c-48c7-b6df-cf64f12b6835",
    "metadata": {},
    "source": [
     "### Librerías:\n",
@@ -76,8 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "80ccdc33-30b0-4266-8703-080ad56dce22",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5a7da0-e660-41c0-9000-e2ad86bc4a6a",
    "metadata": {},
    "source": [
     "# Cliente API\n",
@@ -99,8 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "996336bf-261f-47af-8fe6-4f1635acdea6",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c9396382-0723-4e74-b290-8fa9b88e3daa",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +241,7 @@
        "4   10090  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,8 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "80c0c43c-b00c-4f82-b52f-1b5df6d04e59",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +261,7 @@
        "'CHEMBL220'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,8 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5f5d536c-1268-4ef5-9eff-73492f24fbec",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51107422-8cb2-4b77-bab5-eb2495e1a814",
    "metadata": {},
    "source": [
     "# Bajada de data\n",
@@ -298,8 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1afbf1a9-a4c9-4aec-8255-63948e667b3c",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -319,8 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e8f48b84-3f49-42e7-9973-30e9abb55641",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,8 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e33ba495-9f3b-4bad-9639-a4496c7e2eef",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +709,7 @@
        "[7549 rows x 45 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +720,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be1247ba-95c4-4a0d-951d-f9ce7b531be4",
    "metadata": {},
    "source": [
     "# Limpio data"
@@ -735,8 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0be90440-645e-49c7-9571-eafb81238e7d",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,8 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "90e52e55-fcab-4bcd-9c57-f3f091e2b19b",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,8 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0b2290f4-aaf2-456a-8f8a-0a47fc61eab6",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +878,7 @@
        "[5103 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +889,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e5d88c-277a-4ab2-a13b-851da0efef62",
    "metadata": {},
    "source": [
     "# Preprocesamiento y normalización"
@@ -908,8 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "feaadbcf-f2c5-4deb-a67f-26c41bfd1baa",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,8 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "32fdc9c0-accd-4212-927c-6389be9260a9",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,8 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "766e46cf-5e59-4a7b-806e-9a869744fbe2",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,8 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e33acf0a-7260-42ec-832f-473e339df2e0",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,8 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "987515af-fb28-46f0-a752-91ff88cd0224",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1088,7 @@
        "[5103 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,8 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b63aa28c-e229-4989-91f0-7f8c3ee4584c",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,8 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "e5985ec3-c649-4ceb-a0c4-52d3f7e8664a",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c20b738e-0d05-4117-9022-ada04b624550",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1145,7 +1125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7ca69e-f0f5-4a10-8f38-f3725ebf68dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1153,9 +1132,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DL",
    "language": "python",
-   "name": "python3"
+   "name": "dl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1167,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
